// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the AddStateModal when button is pressed: AddStateModal 1`] = `
<section
  aria-describedby="chakra-modal--body-:r9:"
  aria-labelledby="chakra-modal--header-:r9:"
  aria-modal="true"
  class="chakra-modal__content css-6yiygt"
  id="chakra-modal-:r9:"
  role="dialog"
  style=""
  tabindex="-1"
>
  <header
    class="chakra-modal__header css-72fd9l"
    id="chakra-modal--header-:r9:"
  >
    Add State
  </header>
  <button
    aria-label="Close"
    class="chakra-modal__close-btn css-6sdaxy"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="chakra-icon css-onkibi"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
        fill="currentColor"
      />
    </svg>
  </button>
  <div
    class="chakra-modal__body css-0"
    id="chakra-modal--body-:r9:"
  >
    <div
      class="chakra-form-control css-0"
      role="group"
    >
      <label
        class="chakra-form__label css-uvho5g"
        data-invalid=""
        for="field-:re:"
        id="field-:re:-label"
      >
        Name:
      </label>
      <input
        aria-describedby="field-:re:-feedback"
        aria-invalid="true"
        class="chakra-input css-0"
        id="field-:re:"
        type="text"
        value=""
      />
      <div
        aria-live="polite"
        class="chakra-form__error-message css-70qvj9"
        id="field-:re:-feedback"
      >
        Name is required.
      </div>
    </div>
  </div>
  <footer
    class="chakra-modal__footer css-192qrng"
  >
    <button
      class="chakra-button css-eoelga"
      type="button"
    >
      Close
    </button>
    <button
      class="chakra-button css-eoelga"
      disabled=""
      type="button"
    >
      Add State
    </button>
  </footer>
</section>
`;

exports[`should render the sorted states: Default Home Page 1`] = `
<div>
  <div
    class="css-1kxrbkv"
  >
    <header
      class="css-1utx3w7"
    >
      <button
        class="chakra-button css-4xx2wk"
        type="button"
      >
        Login / Register
      </button>
      <button
        class="chakra-button css-4xx2wk"
        type="button"
      >
        Add State
      </button>
      <button
        class="chakra-button css-4xx2wk"
        type="button"
      >
        Create 10 random tasks
      </button>
    </header>
    <h2
      class="chakra-heading css-tiraa3"
    >
      Board
    </h2>
    <div
      class="css-erspa2"
    >
      <div
        class="chakra-card css-t1emh0"
        title="In progress"
      >
        <div
          class="chakra-card__header css-0"
        >
          <div
            class="css-1ly7b7v"
          >
            <h2
              class="chakra-heading css-0"
            >
              In progress
            </h2>
          </div>
        </div>
        <div
          class="chakra-card__body css-0"
        />
        <div
          class="chakra-card__footer css-k008qs"
        >
          <div
            class="css-gmuwbf"
          >
            <button
              class="chakra-button css-1n9fchx"
              type="button"
            >
              Add task
            </button>
          </div>
        </div>
      </div>
      <div
        class="chakra-card css-t1emh0"
        title="Done"
      >
        <div
          class="chakra-card__header css-0"
        >
          <div
            class="css-1ly7b7v"
          >
            <h2
              class="chakra-heading css-0"
            >
              Done
            </h2>
          </div>
        </div>
        <div
          class="chakra-card__body css-0"
        />
        <div
          class="chakra-card__footer css-k008qs"
        >
          <div
            class="css-gmuwbf"
          >
            <button
              class="chakra-button css-1n9fchx"
              type="button"
            >
              Add task
            </button>
          </div>
        </div>
      </div>
      <div
        class="chakra-card css-t1emh0"
        title="To do"
      >
        <div
          class="chakra-card__header css-0"
        >
          <div
            class="css-1ly7b7v"
          >
            <h2
              class="chakra-heading css-0"
            >
              To do
            </h2>
          </div>
        </div>
        <div
          class="chakra-card__body css-0"
        />
        <div
          class="chakra-card__footer css-k008qs"
        >
          <div
            class="css-gmuwbf"
          >
            <button
              class="chakra-button css-1n9fchx"
              type="button"
            >
              Add task
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render when empty: Empty Home Page 1`] = `
<div>
  <div
    class="css-1kxrbkv"
  >
    <header
      class="css-1utx3w7"
    >
      <span
        class="css-1qm7lvz"
      >
        Your Username is: 
        test
      </span>
      <button
        class="chakra-button css-4xx2wk"
        type="button"
      >
        Logout
      </button>
      <button
        class="chakra-button css-4xx2wk"
        type="button"
      >
        Add State
      </button>
      <button
        class="chakra-button css-4xx2wk"
        type="button"
      >
        Create 10 random tasks
      </button>
    </header>
    <h2
      class="chakra-heading css-tiraa3"
    >
      Board
    </h2>
    <div
      class="css-erspa2"
    />
  </div>
</div>
`;
